--- a/index.html
+++ b/index.html
@@ -149,6 +149,14 @@
 	<p>Сегодня узнали от местных что она живет на 3 этаже, ищем подъезд</p>
   </section>
 
+<section id="contact">
+    <h2 class="section-title">Где я живу?</h2>
+    <p>Если кто-то хочет прислать мне открытку или письмо, я живу в городе <strong>Симферополь</strong>, на улице <strong>Воровского</strong>.</p>
+    <p>Дом и квартира пока неизвестны… потому что даже я их не знаю 😅 Но скоро узнаем!</p>
+	<p>Сегодня узнали от местных что она живет на 3 этаже, ищем подъезд</p>
+  </section>
+
+
 <section id="pets">
     <h2 class="section-title">домашние любимцы</h2>
     <p>У меня есть такса — <strong>по кличке Гоша</strong> 🎬. Он мой верный компаньон во всех моих делах!.</p>
